--- a/Testing iMeeting/Views/iMeeting/Venue.cshtml
+++ b/Testing iMeeting/Views/iMeeting/Venue.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewBag.Title = "Index";
 }
+<meta charset="UTF-8" />
 
 <!-- Button trigger modal -->
 <hr />
@@ -21,10 +22,9 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form>
+                <form method="post" id="contact_form">
                     <div class="form-group row">
                         <input type="text" class="form-control" id="ID" hidden>
-
                         <label for="staticEmail" class="col-sm-2 col-form-label" style="font-weight:bold">Name</label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control" id="RoomName" placeholder="Enter Room Name" required>
@@ -41,12 +41,12 @@
                     <div class="form-group row">
                         <label for="staticEmail" class="col-sm-2 col-form-label" style="font-weight:bold">Limit</label>
                         <div class="col-sm-10">
-                            <input type="number" min="0" class="form-control" id="Limit" placeholder="Number of Participants Here" required>
+                            <input type="number" min="1" class="form-control" id="Limit" placeholder="Number of Participants Here" required>
                         </div>
                     </div>
                     <br />
                     <div style="float:right">
-                        <input type="button" class="btn btn-primary" value="Submit" id="btnAdd" onclick="Add()">
+                        <input type="submit" class="btn btn-primary" value="Submit" id="btnAdd" onclick="Add()">
                         <button type="button" class="btn btn-primary" id="btnUpdate" style="display:none;" onclick="Update();">Update</button>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                     </div>
@@ -72,7 +72,7 @@
 <!-- Button trigger modal -->
 <div>
     <hr />
-    <button  type="button" class="btn btn-primary " data-bs-toggle="modal" data-bs-target="#exampleModal1" style="float:right">
+    <button type="button" class="btn btn-primary " data-bs-toggle="modal" data-bs-target="#exampleModal1" style="float:right">
         Import From AMS
     </button>
     <h4>User Management</h4>
@@ -98,7 +98,7 @@
                             <th>Name</th>
                             <th>Designation</th>
                             <th>Email</th>
-                            <th>Department</th>
+                            @*  <th>Department</th>*@
                             <th>Actions</th>
                         </tr>
                     </thead>
@@ -117,11 +117,10 @@
 <table id="example2" class="table table-striped" style="width:100%">
     <thead>
         <tr>
-            <th>Select</th>
+            <th>Id</th>
             <th>Name</th>
             <th>Designation</th>
             <th>Email</th>
-            <th>Department</th>
             <th>Actions</th>
         </tr>
     </thead>
@@ -131,26 +130,16 @@
 <!-- Modal -->
 @*Crud of Venue*@
 <script>
-
-    //var name;
-    //var email;
-    //var Param;
-
-    //function CopyFromAMS () {
-    //    $(document).on("click", "#copy", function () {
-            
-    //        console.log(Param);
-    //    })
-
-    //})
-
     $(document).ready(function () {
+
+
         // $('#example2').DataTable();
         toastr.options.timeOut = 1500; // 1.5s
         LoadData();
         LoadUsers();
         clearTextBox();
-     
+        LoadIdentityUsers();
+
     });
     function LoadUsers() {
         $.ajax({
@@ -161,21 +150,23 @@
             success: function (result) {
                 var html = '';
                 $.each(result, function (key, item) {
+                    
 
-                    //console.log(result)
+                    console.log(result.length)
                     //debugger
                     html += '<tr>';
                     html += '<td>' + '<input type="checkbox" />' + '</td>';
                     html += '<td>' + item.name + '</td>';
                     html += '<td>' + item.Designation + '</td>';
                     html += '<td>' + item.Email + '</td>';
-                    html += '<td>' + item.Department + '</td>';
+                    //html += '<td>' + item.Department + '</td>';
                     html += '<td>' + item.name + '</td>';
                     html += '</tr>';
                 });
 
                 $('.tbody1').html(html);
                 $('#MainTbl').DataTable();
+
             },
             error: function (errormessage) {
                 alert(errormessage.responseText);
@@ -186,6 +177,7 @@
 
     }
     function LoadData() {
+        // debugger
         $.ajax({
             url: "http://localhost:52092/api/VenueApi/Get",
             type: "GET",
@@ -195,7 +187,6 @@
                 var html = '';
                 $.each(result, function (key, item) {
 
-                    //console.log(result)
                     //debugger
                     html += '<tr>';
                     html += '<td>' + item.ID + '</td>';
@@ -219,32 +210,36 @@
 
     }
     function Add() {
-
-        // debugger
+        
+        debugger
         var Param = {
             //ID: $('#ID').val(),
             RoomName: $('#RoomName').val(),
             Location: $('#Location').val(),
             Limit: $('#Limit').val()
         };
+        console.log(Param.Limit);
+        if (Param.RoomName == "" || Param.Location == "" || Param.Limit==0) { console.log("Validation Error !!") }
+        else {
+            $.ajax({
 
-        $.ajax({
-            url: "http://localhost:52092/api/VenueApi/Add/" + Param,
-            data: JSON.stringify(Param),
-            type: "POST",
-            contentType: "application/json",
-            dataType: "json",
-            success: function (result) {
+                url: "http://localhost:52092/api/VenueApi/Add/" + Param,
+                data: JSON.stringify(Param),
+                type: "POST",
+                contentType: "application/json",
+                dataType: "json",
+                success: function (result) {
 
-                $('#exampleModal').modal('hide');
-                toastr.success('Added Successfully !!');
-                clearTextBox();
-                LoadData();
-            },
-            error: function (errormessage) {
-                console.log(errormessage.responseText);
-            }
-        });
+                    $('#exampleModal').modal('hide');
+                    toastr.success('Added Successfully !!');
+                    clearTextBox();
+                    LoadData();
+                },
+                error: function (errormessage) {
+                    console.log(errormessage.responseText);
+                }
+            });
+        }
     }
     function clearTextBox() {
         $('#ID').val("");
@@ -328,46 +323,101 @@
                 alert(errormessage.responseText);
             }
         });
-        }
+    }
+    function LoadIdentityUsers() {
+        $.ajax({
+            url: "http://localhost:52092/api/VenueApi/GetUsersData",
+            type: "GET",
+            contentType: "application/json",
+            dataType: "json",
+            success: function (result) {
+                var html = '';
+                $.each(result, function (key, item) {
+                    var id = item.Id;
+                    html += '<tr>';
+                    html += '<td>' + item.Id + '</td>';
+                    html += '<td>' + item.FullName + '</td>';
+                    html += '<td>' + item.Designation + '</td>';
+                    html += '<td>' + item.Email + '</td>';/*onclick='gothere(\""+f+"\");'*/
+                    html += '<td><i id="user" class="fa fa-trash" style="font-size:22px;color:#0d6efd" onclick="DeleteUser(\'' + item.Id + '\')" ></i></td>';
+                    html += '</tr>';
+                    console.log(id);
+                });
 
+                $('.tbody2').html(html);
+                $('#example2').DataTable();
+            },
+            error: function (errormessage) {
+                alert(errormessage.responseText);
+            }
+        });
+
+
+
+    }
+    function DeleteUser(Id) {
+        debugger
+        console.log(Id);
+        var ans = confirm("Are you sure you want to delete this Record?");
+        //let Id = $(event.relatedTarget).find('#user');
+        // console.log(Id);
+
+        if (ans) {
+            debugger
+            $.ajax({
+                url: "http://localhost:52092/api/VenueApi/DellUsersData?Id=" + Id,
+                type: "DELETE",
+                success: function (result) {
+                    LoadIdentityUsers();
+                    toastr.info('Deleted Successfully !!');
+                },
+                error: function (errormessage) {
+                    alert(errormessage.responseText);
+                }
+            });
+        }
+    }
 
 </script>
- 
-    @*<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>*@
-    <script type="text/javascript">
-        $(function () {
-            $("#copy").click(function () {
-                var getSelectedRows = $("#MainTbl input:checked").parents("tr").clone();
 
-            $("#example2 tbody").append(getSelectedRows);
+@*<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>*@
+<script type="text/javascript">
+    $(function () {
+        $("#copy").click(function () {
+            var getSelectedRows = $("#MainTbl input:checked").parents("tr").clone();
+
+            // $("#example2 tbody").append(getSelectedRows);
             console.log(getSelectedRows.length)
             var name = $(getSelectedRows).find("td")[1].innerHTML;
+            var designation = $(getSelectedRows).find("td")[2].innerHTML;
             var email = $(getSelectedRows).find("td")[3].innerHTML;
             console.log(name); console.log(email);
-               var Param = {
+            var Param = {
                 name: name,
+                designation: designation,
                 email: email
             };
-                $.ajax({
-                    type: "POST",
-                    url: "/Account/Register",
-                   // data: '{name: "' + name + '" }',
-                    data:JSON.stringify( Param),
-                    contentType: "application/json; charset=utf-8",
-                    dataType: "json",
-                    success: function (response) {
-                        console.log(response);
-                        //alert("Hello: " + response.Name + " .\nCurrent Date and Time: " + response.DateTime);
-                    },
-                    failure: function (response) {
-                            console.log(response);
-                        //alert(response.responseText);
-                    },
-                    error: function (response) {
-                            console.log(response);
-                        //alert(response.responseText);
-                    }
-                });
+            $.ajax({
+                type: "POST",
+                url: "/Account/Register",
+                data: JSON.stringify(Param),
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (response) {
+                    LoadIdentityUsers();
+
+                },
+                failure: function (response) {
+                    LoadIdentityUsers();
+                    console.log(response);
+                },
+                error: function (response) {
+                    LoadIdentityUsers();
+                    console.log(response);
+                }
             });
+
         });
-    </script>
+    });
+</script>
+
